--- a/omronld/omronld_gazebo/param/base_local_planner_params.yaml
+++ b/omronld/omronld_gazebo/param/base_local_planner_params.yaml
@@ -1,24 +1,29 @@
 TrajectoryPlannerROS:
 
 # Robot Configuration Parameters
-  max_vel_x: 0.3
+  max_vel_x: 0.5
   min_vel_x: 0.1
 
   max_vel_theta:  1.0
   min_vel_theta: -1.0
-  min_in_place_vel_theta: 0.6
+  min_in_place_vel_theta: 0.4
 
-  acc_lim_x: 0.5
-  acc_lim_theta: 1.0
+  acc_lim_x: 2.5
+  acc_lim_theta: 2.0
+
+  backup_vel: -0.1
+  escape_vel: -0.1
 
 # Goal Tolerance Parameters
   yaw_goal_tolerance: 0.3
   xy_goal_tolerance: 0.15
 
 # Forward Simulation Parameters
-  sim_time: 3.0
-  vx_samples: 6
+  sim_time: 1.0
+  sim_granularity: 0.025
+  vx_samples: 3
   vtheta_samples: 20
+  controller_frequency: 20
 
 # Trajectory Scoring Parameters
   meter_scoring: true
@@ -32,7 +37,7 @@ TrajectoryPlannerROS:
   oscillation_reset_dist: 0.05
 
 # Differential-drive robot configuration
-  holonomic_robot: false
+  holonomic_robot: true
   max_vel_y: 0.0
   min_vel_y: 0.0
   acc_lim_y: 0.0
