--- a/omronld/omronld_gazebo/param/dwa_local_planner_params.yaml
+++ b/omronld/omronld_gazebo/param/dwa_local_planner_params.yaml
@@ -19,7 +19,7 @@ DWAPlannerROS:
   min_rot_vel: 0.4  # this is the min angular velocity when there is negligible translational velocity
   rot_stopped_vel: 0.4
 
-  acc_lim_x: 2.5 # maximum is theoretically 2.0, but we
+  acc_lim_x: 2.0 # maximum is theoretically 2.0, but we
   acc_lim_th: 2.0
   acc_lim_y: 0.0      # diff drive robot
 
@@ -29,15 +29,15 @@ DWAPlannerROS:
   latch_xy_goal_tolerance: false
 
 # Forward Simulation Parameters
-  sim_time: 2.0       # 1.7
-  sim_granularity: 0.005
-  vx_samples: 10       # 3
-  vy_samples: 20       # diff drive robot, there is only one sample
-  vth_samples: 30  # 20
+  sim_time: 1.7       # 1.7
+  sim_granularity: 0.025
+  vx_samples: 3       # 3
+  vy_samples: 10       # diff drive robot, there is only one sample
+  vth_samples: 20  # 20
   controller_frequency: 20
 
 # Trajectory Scoring Parameters
-  path_distance_bias: 64.0      # 32.0   - weighting for how much it should stick to the global path plan
+  path_distance_bias: 32.0      # 32.0   - weighting for how much it should stick to the global path plan
   goal_distance_bias: 24.0      # 24.0   - wighting for how much it should attempt to reach its goal
   occdist_scale: 0.01           # 0.01   - weighting for how much the controller should avoid obstacles
   forward_point_distance: 0.325 # 0.325  - how far along to place an additional scoring point
@@ -56,6 +56,6 @@ DWAPlannerROS:
 
 
 # Differential-drive robot configuration - necessary?
-  holonomic_robot: false
+  holonomic_robot: true
 
-  prune_plan: true
+  prune_plan: false
