--- a/omronld/omronld_gazebo/param/move_base_params.yaml
+++ b/omronld/omronld_gazebo/param/move_base_params.yaml
@@ -3,7 +3,7 @@
 #  http://www.ros.org/wiki/move_base
 #
 controller_frequency: 10.0
-controller_patience: 10.0
+controller_patience: 5.0
 
 planner_frequency: 1.0
 planner_patience: 5.0
@@ -11,6 +11,9 @@ planner_patience: 5.0
 oscillation_timeout: 10.0
 oscillation_distance: 0.2
 
+conservative_reset_dist: 5.0
+recovery_behavior_enabled: true
+clearing_rotation_allowed: false
 
 shutdown_costmap: false
 base_local_planner: "dwa_local_planner/DWAPlannerROS"
