--- a/omronld/omronld_gazebo/param/dwa_local_planner_params.yaml
+++ b/omronld/omronld_gazebo/param/dwa_local_planner_params.yaml
@@ -32,7 +32,7 @@ DWAPlannerROS:
   sim_time: 1       # 1.7
   sim_granularity: 0.1
   vx_samples: 10       # 3
-  vy_samples: 10       # diff drive robot, there is only one sample
+  vy_samples: 10       # diff drive robot, there is only one sampl
   vth_samples: 20  # 20
   #controller_frequency: 20
 
