Kuka table move test

--- a/iwtros_gazebo/CMakeLists.txt
+++ b/iwtros_gazebo/CMakeLists.txt
@@ -107,11 +107,11 @@ target_link_libraries(conveyor_spawn_node
   conveyor_spawner
 )
 
-# Make plugin libraries #############################################################
+######################## Make plugin libraries #######################################
 list(APPEND CMAKE_CXX_FLAGS "${GAZEBO_CXX_FLAGS}")
-
+## libROSTableControlPlugin.so
 set(ros_table_control_plugins_name ROSTableControlPlugin)
-add_library(${ros_table_control_plugins_name}  src/plugins/ROSTableControlPlugin.cc)
+add_library(${ros_table_control_plugins_name} SHARED src/plugins/ROSTableControlPlugin.cc)
 target_link_libraries(${ros_table_control_plugins_name} ${GAZEBO_LIBRARIES})
 
 #####################################################################################
