--- a/iwtros_gazebo/config/panda_control.yaml
+++ b/iwtros_gazebo/config/panda_control.yaml
@@ -8,7 +8,7 @@
     publish_rate: 50
 
   PositionJointInterface_panda_arm_trajectory_controller:
-    type: position_controllers/JointTrajectoryController
+    type: effort_controllers/JointTrajectoryController
     joints:
       - panda_joint1
       - panda_joint2
@@ -18,16 +18,28 @@
       - panda_joint6
       - panda_joint7
 
+    gains:
+      panda_joint1: {p: 12000, d: 50, i: 0.0, iclamp: 10000}
+      panda_joint2: {p: 30000, d: 50, i: 0.0, iclamp: 10000}
+      panda_joint3: {p: 18000, d: 50, i: 0.0, iclamp: 1}
+      panda_joint4: {p: 18000, d: 50, i: 0.0, iclamp: 10000}
+      panda_joint5: {p: 12000, d: 50, i: 0.0, iclamp: 1}
+      panda_joint6: {p: 7000, d: 50, i: 0.0, iclamp: 1}
+      panda_joint7: {p: 2000, d: 50, i: 0.0, iclamp: 1}
+    
     constraints:
-      goal_time: 0.5
-      stopped_velocity_tolerance: 0.05
-      panda_joint1: {trajectory: 0.1, goal: 0.05}
-      panda_joint2: {trajectory: 0.1, goal: 0.05}
-      panda_joint3: {trajectory: 0.1, goal: 0.05}
-      panda_joint4: {trajectory: 0.1, goal: 0.05}
-      panda_joint5: {trajectory: 0.1, goal: 0.05}
-      panda_joint6: {trajectory: 0.1, goal: 0.05}
-      panda_joint7: {trajectory: 0.1, goal: 0.05}
-    stop_trajectory_duration: 0.5
-    state_publish_rate: 50
-    action_monitor_rate: 10
+      goal_time: 2.0
+      
+    state_publish_rate: 25
+  
+  panda_handa_controller:
+    type: effort_controllers/JointTrajectoryController
+    joints:
+      - panda_finger_joint1
+      - panda_finger_joint2
+    
+    gains:
+      panda_finger_joint1: {p: 5, d: 3.0, i: 0, i_clamp: 1}
+      panda_finger_joint2: {p: 5, d: 1.0, i: 0, i_clamp: 1}
+    
+    state_publish_rate: 25
