--- a/iwtros_moveit_config/config/fake_controllers.yaml
+++ b/iwtros_moveit_config/config/fake_controllers.yaml
@@ -20,3 +20,15 @@ controller_list:
       - ur5_wrist_1_joint
       - ur5_wrist_2_joint
       - ur5_wrist_3_joint
+  - name: fake_panda_arm_controller
+    joints:
+      - panda_joint1
+      - panda_joint2
+      - panda_joint3
+      - panda_joint4
+      - panda_joint5
+      - panda_joint6
+      - panda_joint7
+  - name: fake_panda_hand_controller
+    joints:
+      - panda_finger_joint1
