--- a/iwtros_panda_moveit_config/config/ros_controllers.yaml
+++ b/iwtros_panda_moveit_config/config/ros_controllers.yaml
@@ -1,4 +1,4 @@
-iwt:
+panda_system:
 # MoveIt-specific simulation settings
   moveit_sim_hw_interface:
     joint_model_group: controllers_initial_group_
@@ -10,15 +10,6 @@ iwt:
 # Settings for ros_control hardware interface
   hardware_interface:
     joints:
-      - iiwa_joint_1
-      - iiwa_joint_2
-      - iiwa_joint_3
-      - iiwa_joint_4
-      - iiwa_joint_5
-      - iiwa_joint_6
-      - iiwa_joint_7
-      - wsg50_gripper_left_joint
-      - wsg50_gripper_right_joint
       - panda_joint1
       - panda_joint2
       - panda_joint3
@@ -27,12 +18,6 @@ iwt:
       - panda_joint6
       - panda_joint7
       - panda_finger_joint1
-      - ur5_shoulder_pan_joint
-      - ur5_shoulder_lift_joint
-      - ur5_elbow_joint
-      - ur5_wrist_1_joint
-      - ur5_wrist_2_joint
-      - ur5_wrist_3_joint
     sim_control_mode: 1  # 0: position, 1: velocity
 # Publish all joint states
 # Creates the /joint_states topic necessary in ROS
