--- a/iwtros_iiwa_moveit_config/package.xml
+++ b/iwtros_iiwa_moveit_config/package.xml
@@ -3,7 +3,7 @@
   <name>iwtros_iiwa_moveit_config</name>
   <version>0.3.0</version>
   <description>
-     An automatically generated package with all the configuration and launch files for using the iiwa7 with the MoveIt! Motion Planning Framework
+     An automatically generated package with all the configuration and launch files for using the kuka_iiwa7_system with the MoveIt! Motion Planning Framework
   </description>
   <author email="prachandabhanu@iwt-bodensee.de">v.prachandabhanu</author>
   <maintainer email="prachandabhanu@iwt-bodensee.de">v.prachandabhanu</maintainer>
@@ -27,8 +27,8 @@
   <run_depend>xacro</run_depend>
   <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
   <!-- <run_depend>warehouse_ros_mongo</run_depend> -->
-  <build_depend>iiwa_description</build_depend>
-  <run_depend>iiwa_description</run_depend>
+  <build_depend>robots_ee_pkg</build_depend>
+  <run_depend>robots_ee_pkg</run_depend>
 
 
 </package>
