--- a/iwtros_iiwa_moveit_config/config/ros_controllers.yaml
+++ b/iwtros_iiwa_moveit_config/config/ros_controllers.yaml
@@ -1,4 +1,4 @@
-iiwa7:
+kuka_iiwa7_system:
 # MoveIt-specific simulation settings
   moveit_sim_hw_interface:
     joint_model_group: controllers_initial_group_
@@ -17,6 +17,8 @@ iiwa7:
       - iiwa_joint_5
       - iiwa_joint_6
       - iiwa_joint_7
+      - wsg50_gripper_left_joint
+      - wsg50_gripper_right_joint
     sim_control_mode: 1  # 0: position, 1: velocity
 # Publish all joint states
 # Creates the /joint_states topic necessary in ROS
