--- a/iwtros_moveit_configs/ur5_moveit_config/config/ompl_planning.yaml
+++ b/iwtros_moveit_configs/ur5_moveit_config/config/ompl_planning.yaml
@@ -120,7 +120,7 @@ planner_configs:
     sparse_delta_fraction: 0.25  # delta fraction for connection distance. This value represents the visibility range of sparse samples. default: 0.25
     dense_delta_fraction: 0.001  # delta fraction for interface detection. default: 0.001
     max_failures: 5000  # maximum consecutive failure limit. default: 5000
-iiwa_arm:
+ur5_arm:
   default_planner_config: RRTConnect
   planner_configs:
     - SBL
@@ -146,31 +146,5 @@ iiwa_arm:
     - LazyPRMstar
     - SPARS
     - SPARStwo
-  projection_evaluator: joints(iiwa_joint_1,iiwa_joint_2)
+  projection_evaluator: joints(ur5_shoulder_pan_joint,ur5_shoulder_lift_joint)
   longest_valid_segment_fraction: 0.005
-iiwa_hand:
-  default_planner_config: ""
-  planner_configs:
-    - SBL
-    - EST
-    - LBKPIECE
-    - BKPIECE
-    - KPIECE
-    - RRT
-    - RRTConnect
-    - RRTstar
-    - TRRT
-    - PRM
-    - PRMstar
-    - FMT
-    - BFMT
-    - PDST
-    - STRIDE
-    - BiTRRT
-    - LBTRRT
-    - BiEST
-    - ProjEST
-    - LazyPRM
-    - LazyPRMstar
-    - SPARS
-    - SPARStwo
