new fts controller library

--- a/iwtros_msgs/CMakeLists.txt
+++ b/iwtros_msgs/CMakeLists.txt
@@ -33,7 +33,9 @@ find_package(catkin REQUIRED COMPONENTS
 
 ## Generate messages in the 'msg' folder
 add_message_files(
+  DIRECTORY msg
   FILES
+  ftsControl.msg
   RobotDetach.msg
   Ur5StartTask.msg
 )
