--- a/iwtros_msgs/CMakeLists.txt
+++ b/iwtros_msgs/CMakeLists.txt
@@ -33,7 +33,6 @@ find_package(catkin REQUIRED COMPONENTS
 
 ## Generate messages in the 'msg' folder
 add_message_files(
-  DIRECTORY msg
   FILES
   ftsControl.msg
   RobotDetach.msg
@@ -56,8 +55,8 @@ add_message_files(
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
-   DEPENDENCIES
-   actionlib_msgs   geometry_msgs   nav_msgs   nav_msgs   sensor_msgs   std_msgs
+  DEPENDENCIES
+    actionlib_msgs   geometry_msgs   nav_msgs   nav_msgs   sensor_msgs   std_msgs
 )
 
 
@@ -72,9 +71,9 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES iwtros_msgs
-  CATKIN_DEPENDS message_runtime actionlib_msgs geometry_msgs nav_msgs nav_msgs roscpp rospy sensor_msgs std_msgs tf tf2
+  #INCLUDE_DIRS #include
+  #LIBRARIES #iwtros_msgs
+  CATKIN_DEPENDS message_runtime #actionlib_msgs #geometry_msgs #nav_msgs #nav_msgs #roscpp #rospy #sensor_msgs #std_msgs #tf #tf2
   #DEPENDS #system_lib
 )
 
