New global planner
During the reverse docking of the FTS, because of the path planned by navfn/NavfnROS FTS struggling to dock. With new method might help to eliminate it. Probably!

--- a/iwtros_descriptions/omronld/omronld_gazebo/param/move_base_params.yaml
+++ b/iwtros_descriptions/omronld/omronld_gazebo/param/move_base_params.yaml
@@ -17,3 +17,4 @@ clearing_rotation_allowed: false
 
 shutdown_costmap: false
 base_local_planner: "dwa_local_planner/DWAPlannerROS"
+base_global_planner: "global_planner/GlobalPlanner"
