--- a/iwtros_gazebo/config/panda_control.yaml
+++ b/iwtros_gazebo/config/panda_control.yaml
@@ -7,7 +7,7 @@
     type: joint_state_controller/JointStateController
     publish_rate: 50
 
-  PositionJointInterface_panda_arm_trajectory_controller:
+  position_joint_trajectory_controller:
     type: effort_controllers/JointTrajectoryController
     joints:
       - panda_joint1
@@ -32,7 +32,7 @@
       
     state_publish_rate: 25
   
-  panda_handa_controller:
+  franka_gripper:
     type: effort_controllers/JointTrajectoryController
     joints:
       - panda_finger_joint1
