--- a/iwtros_gazebo/config/panda_control.yaml
+++ b/iwtros_gazebo/config/panda_control.yaml
@@ -33,13 +33,13 @@
     state_publish_rate: 25
   
   franka_gripper:
-    type: effort_controllers/JointTrajectoryController
+    type: position_controllers/JointTrajectoryController
     joints:
       - panda_finger_joint1
       - panda_finger_joint2
     
     gains:
-      panda_finger_joint1: {p: 5, d: 3.0, i: 0, i_clamp: 1}
-      panda_finger_joint2: {p: 5, d: 1.0, i: 0, i_clamp: 1}
+      panda_finger_joint1: {p: 50.0, d: 3.0, i: 0.01, i_clamp: 1}
+      panda_finger_joint2: {p: 50.0, d: 3.0, i: 0.01, i_clamp: 1}
     
-    state_publish_rate: 25
+    #state_publish_rate: 25
