--- a/iwtros_moveit_configs/panda_moveit_configs/config/ompl_planning.yaml
+++ b/iwtros_moveit_configs/panda_moveit_configs/config/ompl_planning.yaml
@@ -149,7 +149,7 @@ panda_arm:
   projection_evaluator: joints(panda_joint1,panda_joint2)
   longest_valid_segment_fraction: 0.005
 panda_hand:
-  default_planner_config: None
+  default_planner_config: ""
   planner_configs:
     - SBL
     - EST
