--- a/iwtros_descriptions/omronld/omronld_gazebo/config/localization.yaml
+++ b/iwtros_descriptions/omronld/omronld_gazebo/config/localization.yaml
@@ -7,9 +7,9 @@ two_d_mode: true
 frequency: 50
 
 odom0: omronld_velocity_controller/odom
-odom0_config: [false, false, false,
-               false, false, false,
-               true, true, true,
+odom0_config: [true, true, false,
+               false, false, true,
+               true, false, false,
                false, false, true,
                false, false, false]
 odom0_differential: false
