--- a/wsg50-ros-pkg/wsg_50_common/CMakeLists.txt
+++ b/wsg50-ros-pkg/wsg_50_common/CMakeLists.txt
@@ -43,10 +43,10 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-add_message_files(FILES Cmd.msg Status.msg)
+add_message_files(FILES Cmd.msg Status.msg OpticalSample.msg WeissFingerData.msg)
 
 ## Generate services in the 'srv' folder
-add_service_files(FILES Conf.srv Incr.srv Move.srv)
+add_service_files(FILES Conf.srv Incr.srv Move.srv OpticalCMD.srv)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
