--- a/wsg50-ros-pkg/wsg_50_driver/CMakeLists.txt
+++ b/wsg50-ros-pkg/wsg_50_driver/CMakeLists.txt
@@ -9,11 +9,12 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   std_srvs
   wsg_50_common
+  #  serial
 )
 
 catkin_package(
-#   INCLUDE_DIRS include
-#  LIBRARIES vh_pixelmap
+   INCLUDE_DIRS include
+  LIBRARIES hand_lib optical_weiss_finger_lib fmf_weiss_finger_lib
   CATKIN_DEPENDS roscpp std_msgs std_srvs wsg_50_common
 #  DEPENDS system_lib
 )
@@ -29,7 +30,7 @@ set(DRIVER_SOURCES
   src/common.cpp include/wsg_50/common.h
   src/functions.cpp include/wsg_50/functions.h
   src/interface.cpp include/wsg_50/interface.h
-  src/main.cpp
+#  src/main.cpp
   src/msg.c include/wsg_50/msg.h
   src/serial.c include/wsg_50/serial.h
   src/tcp.c include/wsg_50/tcp.h
@@ -64,9 +65,53 @@ else()
     message(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
 endif()
 
+add_library(optical_weiss_finger_lib src/optical_weiss_finger.cpp)
+target_link_libraries(optical_weiss_finger_lib ${catkin_LIBRARIES})
+
+add_library(fmf_weiss_finger_lib src/fmf_weiss_finger.cpp)
+target_link_libraries(fmf_weiss_finger_lib ${catkin_LIBRARIES})
+
+add_library(hand_lib src/hand.cpp ${DRIVER_SOURCES})
+target_link_libraries(hand_lib optical_weiss_finger_lib fmf_weiss_finger_lib ${catkin_LIBRARIES})
+add_dependencies(hand_lib wsg_50_common_generate_messages_cpp)
+
+#add_library(uart_comms_lib src/uart_comms.cpp)
+#add_dependencies(uart_comms_lib ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+#target_link_libraries(uart_comms_lib ${catkin_LIBRARIES})
+
+#add_library(load_cell_finger_lib src/load_cell_finger.cpp)
+#target_link_libraries(load_cell_finger_lib uart_comms_lib ${catkin_LIBRARIES})
+
+#add_executable(optical_weiss_finger src/optical_weiss_finger.cpp)
+#target_link_libraries(optical_weiss_finger hand_lib optical_weiss_finger_lib fmf_weiss_finger_lib ${catkin_LIBRARIES})
+#add_dependencies(optical_weiss_finger wsg_50_common_generate_messages_cpp)
+
+add_executable(collect_data src/collect_data.cpp)
+target_link_libraries(collect_data hand_lib optical_weiss_finger_lib fmf_weiss_finger_lib ${catkin_LIBRARIES})
+add_dependencies(collect_data wsg_50_common_generate_messages_cpp)
+
+add_executable(collect_dist_force src/collect_dist_force.cpp)
+target_link_libraries(collect_dist_force hand_lib optical_weiss_finger_lib fmf_weiss_finger_lib ${catkin_LIBRARIES})
+add_dependencies(collect_dist_force wsg_50_common_generate_messages_cpp)
+
+#add_executable(load_cell_finger_test src/load_cell_finger.cpp)
+#target_link_libraries(load_cell_finger_test uart_comms_lib ${catkin_LIBRARIES})
+
+add_executable(hand_test src/hand.cpp ${DRIVER_SOURCES})
+target_link_libraries(hand_test optical_weiss_finger_lib fmf_weiss_finger_lib ${catkin_LIBRARIES})
+add_dependencies(hand_test wsg_50_common_generate_messages_cpp)
+
 add_executable(wsg_50_ip src/main.cpp ${DRIVER_SOURCES})
 target_link_libraries(wsg_50_ip ${catkin_LIBRARIES})
 add_dependencies(wsg_50_ip wsg_50_common_generate_messages_cpp)
+
+add_executable(spi_test src/spi_test.cpp ${DRIVER_SOURCES})
+target_link_libraries(spi_test ${catkin_LIBRARIES})
+add_dependencies(spi_test wsg_50_common_generate_messages_cpp)
+
+add_executable(optical_weiss src/optical_weiss.cpp ${DRIVER_SOURCES})
+target_link_libraries(optical_weiss ${catkin_LIBRARIES})
+add_dependencies(optical_weiss wsg_50_common_generate_messages_cpp)
 
 #add_executable(wsg_50_can src/main_can.cpp src/checksum.cpp src/msg.c src/common.cpp src/functions_can.cpp)
 #add_executable(wsg_50_can src/main_can.cpp ${DRIVER_SOURCES_CAN})
@@ -75,3 +120,8 @@ add_dependencies(wsg_50_ip wsg_50_common_generate_messages_cpp)
 #link_directories(/home/marc/peak-linux-driver-7.5/lib/)
 #add_compile_flags(wsg_50_can -g -Wall)
 #target_link_libraries(wsg_50_can pcan)
+
+install(DIRECTORY include/wsg_50}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.h"
+  PATTERN ".svn" EXCLUDE)
