--- a/wsg50-ros-pkg/wsg_50_common/CMakeLists.txt
+++ b/wsg50-ros-pkg/wsg_50_common/CMakeLists.txt
@@ -7,6 +7,8 @@ project(wsg_50_common)
 find_package(catkin REQUIRED COMPONENTS
   message_generation
   std_msgs
+  actionlib
+  actionlib_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -49,14 +51,17 @@ add_message_files(FILES Cmd.msg Status.msg OpticalSample.msg WeissFingerData.msg
 add_service_files(FILES Conf.srv Incr.srv Move.srv OpticalCMD.srv)
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
+add_action_files(
+  DIRECTORY action
+  FILES
+  Grasp.action
+  Homming.action
+  Move.action
+  Stop.action
+)
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(DEPENDENCIES std_msgs)
+generate_messages(DEPENDENCIES std_msgs actionlib_msgs)
 
 ###################################
 ## catkin specific configuration ##
