wsg 50 action driver code update

--- a/wsg50-ros-pkg/wsg_50_driver/CMakeLists.txt
+++ b/wsg50-ros-pkg/wsg_50_driver/CMakeLists.txt
@@ -54,13 +54,13 @@ add_definitions(-g)
 # C++11 Needed
 include(CheckCXXCompilerFlag)
 
+CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
 CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
 
-if(COMPILER_SUPPORTS_CXX11)
+if(COMPILER_SUPPORTS_CXX14)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+elseif(COMPILER_SUPPORTS_CXX11)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-elseif(COMPILER_SUPPORTS_CXX0X)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 else()
     message(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
 endif()
@@ -101,7 +101,10 @@ add_executable(hand_test src/hand.cpp ${DRIVER_SOURCES})
 target_link_libraries(hand_test optical_weiss_finger_lib fmf_weiss_finger_lib ${catkin_LIBRARIES})
 add_dependencies(hand_test wsg_50_common_generate_messages_cpp)
 
-add_executable(wsg_50_ip src/main.cpp ${DRIVER_SOURCES})
+#add_executable(wsg_50_ip src/main.cpp ${DRIVER_SOURCES})
+#target_link_libraries(wsg_50_ip ${catkin_LIBRARIES})
+#add_dependencies(wsg_50_ip wsg_50_common_generate_messages_cpp)
+add_executable(wsg_50_ip src/new/main_action_driver.cpp ${DRIVER_SOURCES})
 target_link_libraries(wsg_50_ip ${catkin_LIBRARIES})
 add_dependencies(wsg_50_ip wsg_50_common_generate_messages_cpp)
 
