--- a/iwtros_goal/package.xml
+++ b/iwtros_goal/package.xml
@@ -77,6 +77,7 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
   <exec_depend>tf2</exec_depend>
+  <exec_depend>iwtros_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
