--- a/iwtros_moveit_configs/iiwa_moveit_config/config/fake_controllers.yaml
+++ b/iwtros_moveit_configs/iiwa_moveit_config/config/fake_controllers.yaml
@@ -10,5 +10,5 @@ controller_list:
       - iiwa_joint_7
   - name: fake_iiwa_hand_controller
     joints:
-      - wsg50_gripper_left_joint
-      - wsg50_gripper_right_joint
+      - wsg50_finger_left_joint
+      - wsg50_finger_right_joint
