--- a/iwtros_moveit_configs/iiwa_moveit_config/config/ompl_planning.yaml
+++ b/iwtros_moveit_configs/iiwa_moveit_config/config/ompl_planning.yaml
@@ -149,7 +149,7 @@ iiwa_arm:
   projection_evaluator: joints(iiwa_joint_1,iiwa_joint_2)
   longest_valid_segment_fraction: 0.005
 iiwa_hand:
-  default_planner_config: ""
+  default_planner_config: None
   planner_configs:
     - SBL
     - EST
