--- a/iwtros_moveit_configs/iiwa_moveit_config/config/ros_controllers.yaml
+++ b/iwtros_moveit_configs/iiwa_moveit_config/config/ros_controllers.yaml
@@ -17,8 +17,8 @@ kuka_iiwa7_system:
       - iiwa_joint_5
       - iiwa_joint_6
       - iiwa_joint_7
-      - wsg50_gripper_left_joint
-      - wsg50_gripper_right_joint
+      - wsg50_finger_left_joint
+      - wsg50_finger_right_joint
     sim_control_mode: 1  # 0: position, 1: velocity
 # Publish all joint states
 # Creates the /joint_states topic necessary in ROS
