--- a/wsg50-ros-pkg/wsg_50_driver/package.xml
+++ b/wsg50-ros-pkg/wsg_50_driver/package.xml
@@ -48,11 +48,18 @@
   <build_depend>std_srvs</build_depend>
   <build_depend>wsg_50_common</build_depend>
   <build_depend>actionlib_msgs</build_depend>
+  <build_depend>actionlib</build_depend>
+  <build_depend>control_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>std_srvs</run_depend>
   <run_depend>wsg_50_common</run_depend>
   <run_depend>actionlib_msgs</run_depend>
+  <run_depend>actionlib</run_depend>
+  <run_depend>control_msgs</run_depend>
+  <run_depend>sensor_msgs</run_depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
