Gripper test 2: tf2 error
 TF_OLD_DATA ignoring data from the past for frame iiwa_link_3 at time 1.56087e+09 according to authority unknown_publisher

--- a/iwtros_moveit_configs/iiwa_moveit_config/config/controllers.yaml
+++ b/iwtros_moveit_configs/iiwa_moveit_config/config/controllers.yaml
@@ -12,8 +12,8 @@ controller_list:
       - iiwa_joint_6
       - iiwa_joint_7
   - name: wsg50_gripper
-    action_ns: follow_joint_trajectory
-    type: FollowJointTrajectory
+    action_ns: gripper_action
+    type: GripperCommand
     default: true
     joints:
       - wsg50_finger_left_joint
