--- a/iwtros_moveit_configs/panda_moveit_configs/config/joint_limits.yaml
+++ b/iwtros_moveit_configs/panda_moveit_configs/config/joint_limits.yaml
@@ -5,45 +5,45 @@ joint_limits:
   panda_finger_joint1:
     has_velocity_limits: true
     max_velocity: 0.2
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   panda_finger_joint2:
     has_velocity_limits: true
     max_velocity: 0.2
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   panda_joint1:
     has_velocity_limits: true
     max_velocity: 2.175
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   panda_joint2:
     has_velocity_limits: true
     max_velocity: 2.175
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   panda_joint3:
     has_velocity_limits: true
     max_velocity: 2.175
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   panda_joint4:
     has_velocity_limits: true
     max_velocity: 2.175
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   panda_joint5:
     has_velocity_limits: true
     max_velocity: 2.61
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   panda_joint6:
     has_velocity_limits: true
     max_velocity: 2.61
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   panda_joint7:
     has_velocity_limits: true
     max_velocity: 2.61
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
