--- a/iwtros_gazebo/package.xml
+++ b/iwtros_gazebo/package.xml
@@ -61,7 +61,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>std_srvs</build_depend>
   <build_depend>tf</build_depend>
-  <build_depend>pcl</build_depend>
+  <build_depend>libpcl-all-dev</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>laser_geometry</build_depend>
   <build_export_depend>cmake_modules</build_export_depend>
@@ -75,7 +75,7 @@
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>std_srvs</build_export_depend>
   <build_export_depend>tf</build_export_depend>
-  <build_export_depend>pcl</build_export_depend>
+  <build_export_depend>libpcl-all-dev</build_export_depend>
   <build_export_depend>pcl_ros</build_export_depend>
   <build_export_depend>laser_geometry</build_export_depend>
 
@@ -90,7 +90,7 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>std_srvs</exec_depend>
   <exec_depend>tf</exec_depend>
-  <exec_depend>pcl</exec_depend>
+  <exec_depend>libpcl-all-dev</exec_depend>
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>laser_geometry</exec_depend>
 
