--- a/iwtros_moveit_configs/iiwa_moveit_config/config/joint_limits.yaml
+++ b/iwtros_moveit_configs/iiwa_moveit_config/config/joint_limits.yaml
@@ -5,45 +5,45 @@ joint_limits:
   iiwa_joint_1:
     has_velocity_limits: true
     max_velocity: 10
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   iiwa_joint_2:
     has_velocity_limits: true
     max_velocity: 10
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   iiwa_joint_3:
     has_velocity_limits: true
     max_velocity: 10
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   iiwa_joint_4:
     has_velocity_limits: true
     max_velocity: 10
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   iiwa_joint_5:
     has_velocity_limits: true
     max_velocity: 10
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   iiwa_joint_6:
     has_velocity_limits: true
     max_velocity: 10
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   iiwa_joint_7:
     has_velocity_limits: true
     max_velocity: 10
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   wsg50_gripper_left_joint:
     has_velocity_limits: true
     max_velocity: 1
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
   wsg50_gripper_right_joint:
     has_velocity_limits: true
     max_velocity: 1
-    has_acceleration_limits: false
+    has_acceleration_limits: true
     max_acceleration: 0
