--- a/iwtros_moveit_configs/iiwa_moveit_config/config/joint_limits.yaml
+++ b/iwtros_moveit_configs/iiwa_moveit_config/config/joint_limits.yaml
@@ -6,44 +6,44 @@ joint_limits:
     has_velocity_limits: true
     max_velocity: 10
     has_acceleration_limits: true
-    max_acceleration: 0
+    max_acceleration: 30
   iiwa_joint_2:
     has_velocity_limits: true
     max_velocity: 10
     has_acceleration_limits: true
-    max_acceleration: 0
+    max_acceleration: 30
   iiwa_joint_3:
     has_velocity_limits: true
     max_velocity: 10
     has_acceleration_limits: true
-    max_acceleration: 0
+    max_acceleration: 30
   iiwa_joint_4:
     has_velocity_limits: true
     max_velocity: 10
     has_acceleration_limits: true
-    max_acceleration: 0
+    max_acceleration: 30
   iiwa_joint_5:
     has_velocity_limits: true
     max_velocity: 10
     has_acceleration_limits: true
-    max_acceleration: 0
+    max_acceleration: 30
   iiwa_joint_6:
     has_velocity_limits: true
     max_velocity: 10
     has_acceleration_limits: true
-    max_acceleration: 0
+    max_acceleration: 30
   iiwa_joint_7:
     has_velocity_limits: true
     max_velocity: 10
     has_acceleration_limits: true
-    max_acceleration: 0
-  wsg50_gripper_left_joint:
+    max_acceleration: 30
+  wsg50_finger_left_joint:
     has_velocity_limits: true
     max_velocity: 1
     has_acceleration_limits: true
-    max_acceleration: 0
-  wsg50_gripper_right_joint:
+    max_acceleration: 3
+  wsg50_finger_right_joint:
     has_velocity_limits: true
     max_velocity: 1
     has_acceleration_limits: true
-    max_acceleration: 0
+    max_acceleration: 3
