--- a/iwtros_moveit_configs/iiwa_moveit_config/config/ompl_planning.yaml
+++ b/iwtros_moveit_configs/iiwa_moveit_config/config/ompl_planning.yaml
@@ -121,7 +121,7 @@ planner_configs:
     dense_delta_fraction: 0.001  # delta fraction for interface detection. default: 0.001
     max_failures: 5000  # maximum consecutive failure limit. default: 5000
 iiwa_arm:
-  default_planner_config: RRTConnect
+  default_planner_config: None
   planner_configs:
     - SBL
     - EST
@@ -148,8 +148,8 @@ iiwa_arm:
     - SPARStwo
   projection_evaluator: joints(iiwa_joint_1,iiwa_joint_2)
   longest_valid_segment_fraction: 0.005
-iiwa_hand:
-  default_planner_config: None
+iiwa_gripper:
+  default_planner_config: ""
   planner_configs:
     - SBL
     - EST
