--- a/iwtros_moveit_configs/iiwa_moveit_config/config/joint_limits.yaml
+++ b/iwtros_moveit_configs/iiwa_moveit_config/config/joint_limits.yaml
@@ -4,46 +4,46 @@
 joint_limits:
   iiwa_joint_1:
     has_velocity_limits: true
-    max_velocity: 10
+    max_velocity: 1.71042266695
     has_acceleration_limits: true
-    max_acceleration: 30
+    max_acceleration: 2.565634
   iiwa_joint_2:
     has_velocity_limits: true
-    max_velocity: 10
+    max_velocity: 1.71042266695
     has_acceleration_limits: true
-    max_acceleration: 30
+    max_acceleration: 2.565634
   iiwa_joint_3:
     has_velocity_limits: true
-    max_velocity: 10
+    max_velocity: 1.74532925199
     has_acceleration_limits: true
-    max_acceleration: 30
+    max_acceleration: 2.617993878
   iiwa_joint_4:
     has_velocity_limits: true
-    max_velocity: 10
+    max_velocity: 2.26892802759
     has_acceleration_limits: true
-    max_acceleration: 30
+    max_acceleration: 3.403392041
   iiwa_joint_5:
     has_velocity_limits: true
-    max_velocity: 10
+    max_velocity: 2.44346095279
     has_acceleration_limits: true
-    max_acceleration: 30
+    max_acceleration: 3.665191429
   iiwa_joint_6:
     has_velocity_limits: true
-    max_velocity: 10
+    max_velocity: 3.14159265359
     has_acceleration_limits: true
-    max_acceleration: 30
+    max_acceleration: 4.71238898
   iiwa_joint_7:
     has_velocity_limits: true
-    max_velocity: 10
+    max_velocity: 3.14159265359
     has_acceleration_limits: true
-    max_acceleration: 30
+    max_acceleration: 4.71238898
   wsg50_finger_left_joint:
     has_velocity_limits: true
     max_velocity: 1
     has_acceleration_limits: true
-    max_acceleration: 3
+    max_acceleration: 1.5
   wsg50_finger_right_joint:
     has_velocity_limits: true
     max_velocity: 1
     has_acceleration_limits: true
-    max_acceleration: 3
+    max_acceleration: 1.5
