Added collision object and visual markers
collision object is working fine, but visual marker is not show at required position

--- a/iwtros_goal/CMakeLists.txt
+++ b/iwtros_goal/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(catkin REQUIRED COMPONENTS
   moveit_ros_planning_interface
   moveit_msgs
   iwtros_msgs
+  moveit_visual_tools
 )
 
 #catkin_python_setup()
